--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  outline: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --background-color: cyan;
+  --color-orange: orange;
+  --color-primary: green;
+  --color-white: #fff;
+  --color-light: rgba(255, 255, 255, 0.6);
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  background: vsr(--background-color);
+  line-height: 1.6;
+}
+
+.text-light {
+  color: var(--color-white);
 }
